add now tab navigation

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,7 @@ import { SITE_TITLE } from '../consts';
 	   <div class="internal-links">
 		   <HeaderLink href="/">Home</HeaderLink>
 		   <HeaderLink href="/blog">Blog</HeaderLink>
+		   <HeaderLink href="/now">Now</HeaderLink>
 		   <HeaderLink href="/about">About</HeaderLink>
 	   </div>
 	   <!-- Add social/profile links here if desired -->
